# lib/controllers/controllerSubComment.js
@@ -12,9 +12,8 @@ module.exports = {
                 required: true, 
                 schema: { 
                     commentObjectId: "63703f1de318f3ffa792dde4",
-                    creationDate: "MilissegundosString",
+                    creationDate: "561561516561",
                     comment: "Este e um SubComment" ,
-                    numberOfLikes: 0,
                 } 
             }
          */
@@ -41,6 +40,8 @@ module.exports = {
                 existingPost._id,
                 existingPost
             );
+
+            var teste = SubComment.create(newSubComment);
 
             res.status(200).json(newPost);
         } catch (error) {
